Log in
Skip to main content
Skip to sidebar
Dashboards
Projects
Issues
Give feedback to Atlassian
Help
Jira Core help
Keyboard Shortcuts
About Jira
Jira Credits
Log In
Qt
QTBUG-9493
Bearer not building when using feature support.
Log In
Closed
Export
null
XML
Word
Printable
Details
Type:
Bug
Resolution:
Done
Priority:
P3: Somewhat important
Fix Version/s:
4.7.0
Affects Version/s:
4.7.0
Component/s:
Network: BearerManagement
Labels:
None
Environment:
Linux
Description
Try building Qt embedded with -qconfig minimal
Attachments
Gerrit Reviews
Options
Issue Only
Show All Reviews
Show Open Reviews
Show All Issues
Show Open Issues
No reviews matched the request. Check your Options in the drop-down menu of this sections header.
Activity
People
Assignee:
Aaron McCarthy (closed Nokia identity) (Inactive)
Reporter:
Justin McPherson (closed Nokia identity) (Inactive)
Votes:
1
Vote for this issue
Watchers:
0
Start watching this issue
Dates
Created:
30 Mar '10 05:52
Updated:
10 May '10 02:53
Resolved:
16 Apr '10 06:04
Gerrit Reviews
There are no open Gerrit changes