Fix building of corelib, network and gui with qconfig minimal.

The bearer management code, which this bug is for, was fixed by MR 517
previously.

Task-number: QTBUG-9493
Reviewed-by: alex